<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BiblioTech</string>
    <string name="nav_header_title">BiblioTech</string>
    <string name="nav_header_subtitle">Books for Everyone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="find_series">Update Series</string>
    <string name="update_series">Updating Series</string>
    <string name="menu_books">Books</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_export_import">Export/Import</string>
    <string name="menu_help">Help</string>
    <string name="menu_bookshelves">Bookshelves</string>
    <string name="book_thumb">Book Thumbnail</string>
    <string name="id">ID:</string>
    <string name="isbn">ISBN</string>
    <string name="isbns">ISBNs:</string>
    <string name="series_colon">Series:</string>
    <string name="vol_colon">Volume:</string>
    <string name="bad_isbn">%1$s: ISBN is invalid.</string>
    <string name="no_ISBNs">ISBN barcode was not scanned</string>
    <string name="title_desc">Book Title</string>
    <string name="subtitle_desc">Book Subtitle</string>
    <string name="authors_desc">Book Authors</string>
    <string name="authors_by">By:</string>
    <string name="pages">Pages</string>
    <string name="modified">Modified:</string>
    <string name="added">Added:</string>
    <string name="categories">Categories:</string>
    <string name="tags">Tags:</string>
    <string name="title">Title</string>
    <string name="select_title">Select the Book Title</string>
    <string name="select_titles">Select the Book Titles</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="delete_books">Delete books</string>
    <plurals name="ask_delete_books">
        <item quantity="one">Delete %d book?</item>
        <item quantity="other">Delete %d books?</item>
    </plurals>
    <string name="all">ALL</string>
    <string name="none">NONE</string>
    <string name="swap">SWAP</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="select_invert">Swap Selection</string>
    <string name="tag">Tag</string>
    <string name="tag_books">Tag books</string>
    <string name="add_tags">Add Tags</string>
    <string name="remove_tags">Remove Tags</string>
    <string name="replace_tags">Replace Tags</string>
    <string name="new_tag">New Tag</string>
    <string name="delete_tags">Delete Tags</string>
    <string name="edit_tag">Edit Tag</string>
    <plurals name="ask_delete_tags">
        <item quantity="one">Delete %d tag?</item>
        <item quantity="other">Delete %d tags?</item>
    </plurals>
    <plurals name="ask_delete_shelves">
        <item quantity="one">Delete %d shelf?</item>
        <item quantity="other">Delete %d shelves?</item>
    </plurals>
    <string name="add_title">Add New Tag</string>
    <string name="add_message">Enter the name and description for the new tag</string>
    <string name="edit_title">Edit Tag</string>
    <string name="edit_message">Change the name and description for the tag</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="tag_conflict_title">Duplicate Tag</string>
    <string name="tag_conflict_add_message">The name of the tag you are adding already exists.\n\nReplace the duplicate tag?</string>
    <string name="tag_conflict_edit_message">The name of the tag you are editing already exists.\n\nMerge the duplicate tag with the one you are editing?</string>
    <plurals name="ask_tag_books">
        <item quantity="one">Tag %d books?</item>
        <item quantity="other">Tag %d books?</item>
    </plurals>
    <plurals name="ask_un_tag_books">
        <item quantity="one">Remove tags from %d books?</item>
        <item quantity="other">Remove tags from %d books?</item>
    </plurals>
    <plurals name="ask_replace_tag_books">
        <item quantity="one">Replace tags for %d books?</item>
        <item quantity="other">Replace tags for %d books?</item>
    </plurals>
    <string name="book_stats" tools:ignore="PluralsCandidate">Books: %1$d Selected: %2$d</string>
    <string name="order">Order</string>
    <string name="filter">Filter</string>
    <string name="criteria">Criteria</string>
    <string name="drawer">Drawer</string>
    <string name="saved_filters">Saved Filters</string>
    <string name="order_by">Order</string>
    <string-array name="order_by_enum" translatable="false">
        <item>LAST_NAME</item>
        <item>FIRST_NAME</item>
        <item>TITLE</item>
        <item>CATEGORIES</item>
        <item>TAGS</item>
        <item>DATE_ADDED</item>
        <item>DATE_MODIFIED</item>
        <item>SERIES</item>
        <item>SELECTED</item>
    </string-array>
    <string name="header">Header</string>
    <string name="author">Author</string>
    <string name="any">Any</string>
    <string name="subtitle">Subtitle</string>
    <string name="category">Category</string>
    <string name="source">Source</string>
    <string name="source_colon">Source:</string>
    <string name="volume">Volume</string>
    <string name="books">Books</string>
    <string name="rating">Rating</string>
    <string name="rating_colon">Rating:</string>
    <string name="date_added">Date Added</string>
    <string name="date_changed">Date Changed</string>
    <string name="series">Series</string>
    <string name="selected">Selected</string>
    <string name="selected_true">true</string>
    <string name="small_thumb">Icon</string>
    <string name="large_thumb">Cover</string>
    <string name="filter_by">Filter</string>
    <string name="predicate">By</string>
    <string name="one_of">is</string>
    <string name="not_one_of">isn\'t</string>
    <string name="has">has</string>
    <string name="not_has">hasn\'t</string>
    <string name="gt">&gt;</string>
    <string name="ge">&gt;=</string>
    <string name="lt">&lt;</string>
    <string name="le">&lt;=</string>
    <string name="value">Value</string>
    <string name="month_year_pattern">M/y</string>
    <string name="new_filter_title">New Filtered View</string>
    <string name="view_conflict_title">Duplicate Filter</string>
    <string name="view_conflict_message">The name of the filter you are adding already exists.\n\nReplace the duplicate filter?</string>
    <string name="add_view_title">Add New Filter</string>
    <string name="add_view_message">Enter the name and description for the new filter</string>
    <string name="remove_view_title">Remove Filter</string>
    <string name="remove_view_message">Remove the current filter?</string>
    <string name="no_books_found">No books were found.</string>
    <string name="request_camera_permissions">Request Camera Permission</string>
    <string name="camera_permission_message">BiblioTech needs access to the camera in order to scan book barcodes. You can search by ISBN or author and title if you don\'t want to scan barcodes.\n\nPlease request the camera permission to scan barcodes.</string>
    <string name="book_selected">Book Selected</string>
    <string name="sort_direction">Sort Direction</string>
    <string name="colon">:</string>
    <string name="export_books">Export Books</string>
    <string name="keep_existing">Keep Existing Books and Views</string>
    <string name="replace_existing">Replace Existing Books and Views</string>
    <string name="select_to_replace">Select Books and Views to Replace Existing</string>
    <string name="export">Export</string>
    <string name="select_view">Select View</string>
    <string name="export_views">Export Views</string>
    <string name="import_label">Import</string>
    <string name="all_books">** All Books **</string>
    <string name="no_books_selected_for_export">No books were found to be exported.</string>
    <string name="no_views_selected_for_export">No views were found to be exported.</string>
    <string name="bad_format_import">The selected content was not the correct format.</string>
    <string name="io_error_export">There was an IO Error writing the data.</string>
    <string name="io_error_import">There was an IO Error reading the data.</string>
    <string name="canceled_import">The import was canceled.</string>
    <string name="replace_all">Replace All</string>
    <string name="replace_none">Replace None</string>
    <string name="name_and_desc">%1$s: %2$s</string>
    <string name="ask_replace_message_books">Select Existing Books to Import</string>
    <string name="ask_replace_message_filters">Select Existing Views to Import</string>
    <string name="export_complete">Export Complete</string>
    <string name="import_complete">Import Complete</string>
    <string name="addBookUndo">Add/Update Book %1$s</string>
    <string name="deleteBooksUndo">Delete Books</string>
    <string name="addTagUndo">Add/Update Tag %1$s</string>
    <string name="deleteTagsUndo">Delete Tags</string>
    <string name="replaceTagsUndo">Replace Tags</string>
    <string name="tagBooksUndo">Tag Books</string>
    <string name="untagBooksUndo">Untag Books</string>
    <string name="addViewUndo">Add/Update View %1$s</string>
    <string name="deleteViewUndo">Delete View</string>
    <string name="undo">Undo</string>
    <string name="undoName">Undo: %1$s</string>
    <string name="redo">Redo</string>
    <string name="redoName">Redo: %1$s</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="undo_levels">Undo Levels</string>
    <string name="undo_level_summary">Current Levels: %1$d</string>
    <string name="undo_clear">Clear Undo</string>
    <string name="import_undo_desc">Import</string>
    <string name="can_clear_undo">\nIs it OK to clear all undo information?</string>
    <string name="undo_clear_summary">Press to clear all undo information.</string>
    <string name="save_pdf">Save PDF</string>
    <string name="print">Print</string>
    <string name="select_layout">Select Layout:</string>
    <string name="columns">Columns:</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="update_series_message">You have some books that were added before BiblioTech kept track of book series.
        BiblioTech can search to find series that your books belong to.
        \n\nPress the Start button to start the process. You can Stop it an any time and restart from where you left off.
    </string>
    <string name="bookshelf_title">Bookshelf Title</string>
    <string name="bookshelf_description">Bookshelf Description</string>
    <string name="commit">Commit</string>
    <string name="revert">Revert</string>
    <string name="self_link">Self link</string>
    <string name="linked_to_tag">Linked to tag</string>
    <string name="new_shelf">New Shelf</string>
    <string name="refresh">Refresh</string>
</resources>