<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_drawer"
        android:checkable="true"
        android:icon="@drawable/ic_menu_action_drawer"
        android:title="@string/drawer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_redo"
        android:title="@string/redo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:titleCondensed="@string/all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_none"
        android:title="@string/select_none"
        android:titleCondensed="@string/none"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_invert"
        android:title="@string/select_invert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_print_fragment"
        android:title="@string/print"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_settingsFragment"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
