<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_new_tag"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/new_tag"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_remove_24"
        android:title="@string/delete_tags"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit_tag"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:titleCondensed="@string/all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_none"
        android:title="@string/select_none"
        android:titleCondensed="@string/none"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_invert"
        android:title="@string/select_invert"
        android:titleCondensed="@string/swap"
        app:showAsAction="always" />
</menu>