<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_tags"
        android:icon="@drawable/ic_menu_tag_24"
        android:title="@string/add_tags"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove_tags"
        android:icon="@drawable/ic_baseline_remove_24"
        android:title="@string/remove_tags"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_replace_tags"
        android:icon="@drawable/ic_baseline_arrow_right_alt_24"
        android:title="@string/replace_tags"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_none"
        android:title="@string/select_none"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_invert"
        android:title="@string/select_invert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
