<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_menu_books"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_scan"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/action_nav_books_to_exportImportFragment"
            android:icon="@drawable/ic_menu_import_export"
            android:title="@string/menu_export_import" />
        <item
            android:id="@+id/action_to_settingsFragment"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
    </group>

    <item
        android:id="@+id/saved_filters"
        android:title="@string/saved_filters">
        <menu />
    </item>

</menu>
