<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_books">

    <fragment
        android:id="@+id/nav_books"
        android:name="com.github.cleveard.bibliotech.ui.books.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/books_fragment">
        <argument
            android:name="filterName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_books_to_exportImportFragment"
            app:destination="@id/exportImportFragment" />
        <action
            android:id="@+id/action_nav_books_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_nav_books_to_printFragment"
            app:destination="@id/printFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.github.cleveard.bibliotech.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/scan_fragment" >
        <action
            android:id="@+id/action_nav_scan_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <action
        android:id="@+id/filter_books"
        app:destination="@id/nav_books" />
    <action
        android:id="@+id/scan_codes"
        app:destination="@id/nav_scan" />

    <fragment
        android:id="@+id/exportImportFragment"
        android:name="com.github.cleveard.bibliotech.ui.interchange.ExportImportFragment"
        android:label="@string/menu_export_import"
        tools:layout="@layout/export_import_fragment">
        <argument
            android:name="filterName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.github.cleveard.bibliotech.ui.settings.SettingsFragment"
        android:label="@string/action_settings" />
    <fragment
        android:id="@+id/printFragment"
        android:name="com.github.cleveard.bibliotech.ui.print.PrintFragment"
        android:label="@string/print"
        tools:layout="@layout/print_fragment">
        <argument
            android:name="filterName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <dialog
        android:id="@+id/googleBookLoginFragment"
        android:name="com.github.cleveard.bibliotech.ui.gb.GoogleBookLoginFragment"
        android:label="fragment_google_book_login" />

</navigation>