<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <View
        android:id="@+id/book_list_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/book_list_always"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_list_separator"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ViewFlipper
            android:id="@+id/book_list_flipper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp">

            <ImageView
                android:id="@+id/book_list_thumb"
                android:layout_width="27dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/book_thumb"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/star_big_on" />
        </ViewFlipper>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_desc"
                android:textSize="@dimen/book_list_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_list_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_list_title"
                android:contentDescription="@string/subtitle_desc" />

            <TextView
                android:id="@+id/book_list_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_list_subtitle"
                android:layout_marginEnd="3dp"
                android:text="@string/authors_by" />

            <TextView
                android:id="@+id/book_list_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/book_list_by"
                android:layout_toEndOf="@+id/book_list_by"
                android:contentDescription="@string/authors_desc" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
