<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/action_select_none"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_select_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/none"
        app:layout_constraintStart_toEndOf="@id/action_select_all"
        app:layout_constraintEnd_toStartOf="@id/action_select_invert"
        app:layout_constraintBaseline_toBaselineOf="@id/action_select_all"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_select_invert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/swap"
        app:layout_constraintStart_toEndOf="@+id/action_select_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/action_select_all"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imported_list"
        android:layout_width="match_parent"
        android:layout_height="585dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_select_all"/>

</androidx.constraintlayout.widget.ConstraintLayout>