<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.bookshelves.BookshelvesFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookshelves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_shelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/new_shelf"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:id="@+id/ok_or_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        app:layout_dodgeInsetEdges="bottom|top">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#008800"
            android:contentDescription="@string/commit"
            app:fabCustomSize="80dp"
            app:tint="#ffffff"
            app:srcCompat="@drawable/check_mark" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/revert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#cc0000"
            android:contentDescription="@string/revert"
            app:fabCustomSize="80dp"
            app:tint="#ffffff"
            app:srcCompat="@drawable/x_mark" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
